# codebase-to-llm

./: .gitignore  AGENTS.md  FILE_MANAGER_TEST_GUIDE.md  README.md  UserManual.md  alembic.ini  main.py  mypy.ini  pyproject.toml  test_video_key_insights.sh  test_video_summary.sh
.clinerules/: AGENTS.md
.cursor/: rules
application/: copy_context.py  ignore_service.py  ports.py  rules_service.py
docker/: .dockerignore  Dockerfile  Dockerfile.downloader  README.md  build-and-push.sh  docker-compose.yml  entrypoint-worker.sh  entrypoint.sh  test-docker.sh  vm-management.sh
domain/: directory_tree.py  ignore_tokens.py  result.py  rules.py  selected_text.py  value_object.py
features/: README.md  environment.py  video_black_box_workflow.feature  video_key_insights.feature  video_subtitles.feature  video_summary.feature
infrastructure/: filesystem_directory_repository.py  filesystem_ignore_repository.py  qt_clipboard_service.py
interface/: gui.py
llm/: software_architect_prompt.txt
migrations/: README.md  env.py
scripts/: translate.py
tests/: test_add_prompt_from_file_use_case.py  test_api_key_domain.py  test_copy_context.py  test_directory_modification.py  test_directory_tree.py  test_external_source_management.py  test_filesystem_use_cases.py  test_gcp_stream_route.py  test_ignore_tokens.py  test_list_files_directories_use_cases.py  test_model_domain.py  test_prompt_repository.py  test_rules_use_cases.py  test_uc_generate_llm_response.py  test_uc_get_model_api_key.py  test_uc_update_and_delete_ass_file.py  test_user_registration_validation.py
(+197 files in other folders)
