[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase_to_llm"
version = "0.0.4.1"
requires-python = ">=3.11"
dependencies = [
    "pyside6-stubs>=6.7.3.0",
    "PySide6>=6.6.0",
    "typing-extensions>=4.14.0",
    "mypy>=1.0",
    "pygments>=2.19.1",
    "youtube-transcript-api>=0.6.2",
    "trafilatura>=2.0.0",
    "openai>=1.91.0",
    "httpx>=0.28.1",
    "fastapi>=0.112.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "yt-dlp>=2024.3.10",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "alembic>=1.16.4",
    "python-dotenv>=1.0.0",
    "google-cloud-storage>=2.10.0",
    "websockets>=12.0",
]

[project.urls]
"Homepage" = "https://github.com/kevinduigou/codebase-to-llm"

[project.scripts]
codebase-to-llm = "codebase_to_llm.main:main"

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "twine>=6.1.0",
    "types-passlib>=1.7.7.20250602",
    "types-pygments>=2.19.0.20250516",
    "typing-extensions>=4.14.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"migrations/**" = ["F401", "E402"]   # or ignore everything: ["ALL"]
